log
Tue Oct 20 15:17:24 UTC 2020: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: unused variable ‘hippieArray’ [-Werror=unused-variable]
 heapElem * hippieArray = (heapElem*) malloc (sizeof(heapElem));
            ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Tue Oct 20 15:19:03 UTC 2020: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|4
total_score: 0/70
2bd7e30
Tue Oct 20 15:19:26 UTC 2020: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|4
total_score: 0/70
cdee41b
Tue Oct 20 15:20:37 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
a.out: malloc.c:2401: sysmalloc: Assertion `(old_top == initial_top (av) && old_size == 0) || ((unsigned long) (old_size) >= MINSIZE && prev_inuse (old_top) && ((unsigned long) old_end & (pagesize - 1)) == 0)' failed.
a.out: malloc.c:2401: sysmalloc: Assertion `(old_top == initial_top (av) && old_size == 0) || ((unsigned long) (old_size) >= MINSIZE && prev_inuse (old_top) && ((unsigned long) old_end & (pagesize - 1)) == 0)' failed.
 tests:  0|0
a.out: malloc.c:2401: sysmalloc: Assertion `(old_top == initial_top (av) && old_size == 0) || ((unsigned long) (old_size) >= MINSIZE && prev_inuse (old_top) && ((unsigned long) old_end & (pagesize - 1)) == 0)' failed.
cdba1f0
